--- a/src/app/my-farmer/my-farmer.component.html
+++ b/src/app/my-farmer/my-farmer.component.html
@@ -336,15 +336,19 @@
             </li>
           </ul>
           <div class="col-12 col-sm-auto d-flex justify-content-end duration-selection" *ngIf="showHistoricalDurationSelection | async">
-            <div *ngFor="let duration of possibleDurations" class="z-2">
-              <input type="radio" class="btn-check" name="options-base" id="duration-radio-{{duration}}" autocomplete="off" [(ngModel)]="selectedHistoricalStatsDuration" [value]="duration">
-              <label class="btn" for="duration-radio-{{duration}}">{{duration.toUpperCase()}}</label>
+            <div class="btn-group" style="display: inline-block" role="group" aria-label="Historical duration selection">
+              <ng-container *ngFor="let duration of possibleDurations">
+                <input type="radio" class="btn-check" name="options-base" id="duration-radio-{{duration}}" autocomplete="off" [(ngModel)]="selectedHistoricalStatsDuration" [value]="duration">
+                <label class="btn" [ngClass]="radioSelectionButtonClasses" for="duration-radio-{{duration}}">{{duration.toUpperCase()}}</label>
+              </ng-container>
             </div>
           </div>
-          <div class="col-12 col-sm-auto d-flex justify-content-end duration-selection" *ngIf="showAccountPayoutsChartDurationSelection$ | async">
-            <div *ngFor="let duration of possibleAccountPayoutsChartDurations" class="z-2">
-              <input type="radio" class="btn-check" name="options-base" id="duration-radio-apc-{{duration}}" autocomplete="off" [(ngModel)]="selectedAccountPayoutsChartDuration" [value]="duration">
-              <label class="btn" for="duration-radio-apc-{{duration}}">{{duration.toUpperCase()}}</label>
+          <div class="col-12 col-sm-auto d-flex justify-content-end duration-selection" *ngIf="showAccountPayoutsChartSizeSelection$ | async">
+            <div class="btn-group" style="display: inline-block" role="group" aria-label="Account payout chart size selection">
+              <ng-container *ngFor="let size of possibleAccountPayoutsChartSizes">
+                <input type="radio" class="btn-check" name="radio-btn" id="duration-radio-apc-{{size}}" autocomplete="off" [(ngModel)]="selectedAccountPayoutsChartSize" [value]="size">
+                <label class="btn" [ngClass]="radioSelectionButtonClasses" for="duration-radio-apc-{{size}}">{{size}}</label>
+              </ng-container>
             </div>
           </div>
         </div>
