--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,7 +4,12 @@
       <div>
         <div class="alert alert-warning d-flex align-items-center" role="alert">
           <div>
-            ⚠ Due to a bug in the chia codebase <strong>block forging is currently impacted</strong>. Chia nodes running 2.5.0 and below might stop producing blocks until restarted, and can stop producing blocks again later. <strong>Please upgrade to <a href="{{downloadUrl}}" target="_blank">2.5.1</a> as soon as possible, as the pool rejects all partials from older versions!</strong>
+            ⚠ Due to a bug in the chia codebase <strong>block forging is currently impacted</strong>.
+            Chia nodes running 2.5.0 and below might stop producing blocks until restarted, and can stop producing blocks again later.
+            <br><br>
+            <strong>
+              Please upgrade to <a href="{{downloadUrl}}" target="_blank">2.5.1</a> as soon as possible, as the pool rejects all partials from older versions!
+            </strong> Foxy-Farmer users do not need to update 👍
           </div>
         </div>
       </div>
